@@ -4,6 +4,7 @@
     * Work around a bug: pinter in serial print mode while wizard is shown
     * Flag checked replaced by prepared
     * Add a basic status display
+    * Add an upload progress screen for slicer uploads
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
